# vitaltags

./: .env  .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  security.yml
apps/api/: Dockerfile  alembic.ini  gunicorn_conf.py  pyproject.toml  seed_demo.py
apps/api/app/: config.py  db.py  deps.py  main.py  rate_limit.py  security.py
apps/api/app/models/: __init__.py  medical.py  profile.py  scan.py  tag.py  terminology.py  user.py
apps/api/app/routers/: auth.py  me_medical.py  me_profile.py  me_tags.py  public.py  terminology.py
apps/api/app/services/: pdf.py  qr.py  terminology.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py
apps/web/: .env.local  Dockerfile  next.config.mjs  package.json  tailwind.config.js
apps/web/app/: globals.css  layout.tsx  manifest.ts  middleware.ts  page.tsx  robots.ts
apps/web/app/(owner)/: layout.tsx
apps/web/components/: EmergencyCard.tsx  PrintButton.tsx
apps/web/components/dashboard/: QuickActions.tsx  RecentActivity.tsx  StatsCard.tsx
apps/web/lib/: api.ts
infra/: init-db.sql
infra/nginx/: default.conf  nginx.conf
vitaltags-v2/: .env.example  .eslintrc.json  .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json  vitest.config.ts  vitest.setup.ts
vitaltags-v2/apps/web/: next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
vitaltags-v2/prisma/: schema.prisma
vitaltags-v2/scripts/: seed.ts
(+68 files in other folders)
